@@ -1,3 +1,8 @@
+Version CVS HEAD (?)
+
+  * Gigasampler format engine:
+    - fine tuning of the EG modulation parameters
+
 Version 0.3.3 (15 July 2005)
 
   * packaging changes:
